package javaLang.factoryFunction.normal;

/**
 * 抽象产品类
 */
public abstract class Product {
    /**
     * 产品类的抽象方法，由具体的产品类去实现
     */
    public abstract void method();
}
